--- a/index.html
+++ b/index.html
@@ -1,23 +1,42 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Skycast</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./styles/main.css">
-    <link rel="stylesheet" href="./styles/sideMenu.css">
-    <link rel="stylesheet" href="./styles/card.css">   
-    <link rel="stylesheet" href="./styles/header.css">  
-</head>
-<body>
-    <header>
 
-    </header>
-    <main>
-        
-    </main>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Skycast</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="./styles/main.css">
+        <link rel="stylesheet" href="./styles/sideMenu.css">
+        <link rel="stylesheet" href="./styles/card.css">
+        <link rel="stylesheet" href="./styles/header.css">
+    </head>
+
+    <body>
+        <header>
+
+        </header>
+        <main>
+            <aside class="sideMenu">
+                <button class="btnClose">
+                    <img src="./images/exit.svg" alt="Fechar">
+                </button>
+                <div class="logo__container">
+                    <img class="logo" src="./images/logo.svg" alt="Skycast logo">
+                </div>
+                <nav class="">
+                    <ul class="menu">
+                        <li class="target">América</li>
+                        <li>Europa</li>
+                        <li>África</li>
+                        <li>Ásia</li>
+                        <li>Oceania</li>
+                    </ul>
+                </nav>
+            </aside>
+        </main>
+    </body>
+
 </html>
