--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="./styles/main.css">
-        <link rel="stylesheet" href="./styles/sideMenu.css">
+        <link rel="stylesheet" href="./styles/reset.css">
+        <link rel="stylesheet" href="./styles/global.css">
         <link rel="stylesheet" href="./styles/card.css">
         <link rel="stylesheet" href="./styles/header.css">
     </head>
@@ -23,20 +23,28 @@
                 <button class="btnClose">
                     <img src="./images/exit.svg" alt="Fechar">
                 </button>
+
                 <div class="logo__container">
                     <img class="logo" src="./images/logo.svg" alt="Skycast logo">
                 </div>
-                <nav class="">
+
+                <nav class="navBar">
                     <ul class="menu">
-                        <li class="target">América</li>
+                        <li class="target">America</li>
                         <li>Europa</li>
                         <li>África</li>
-                        <li>Ásia</li>
-                        <li>Oceania</li>
+                        <li>Asia</li>
+                        <li>Oceanía</li>
                     </ul>
                 </nav>
+
+                <p class="credits">Desarollado por Alura Latam</p>
             </aside>
         </main>
+
+        <script async src="./scripts/script.js"></script>
+        <script async src="./scripts/api.js"></script>
+        <script async src="./scripts/pages.js"></script>
     </body>
 
 </html>
