--- a/index.html
+++ b/index.html
@@ -16,7 +16,15 @@
 
     <body>
         <header>
+            <div class="titleSection">
+                <h1 class="titleSection--name">America</h1>
+                <p class="titleSection--subtitle">& todos sus climas</p>
+            </div>
 
+            <div class="searchBar-container">
+                <input class="searchBar-input" type="text" placeholder="Buscar...">
+                <img class="searchBar-icon" src="./images/lupa.svg" alt="lupa">
+            </div>
         </header>
         <main>
             <aside class="sideMenu">
