feat: main style

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                 <p class="credits">Desarollado por Alura Latam</p>
             </aside>
         </header>
+
         <main>
             <section class="searchSection">
                 <div class="titleSection">
@@ -49,9 +50,17 @@
                 </div>
             </section>
 
-            <div class="card">
-                
-            </div>
+            <section class="card-container">
+                <div class="card">
+
+                </div>
+                <div class="card">
+
+                </div>
+                <div class="card">
+
+                </div>
+            </section>
         </main>
 
         <script async src="./scripts/script.js"></script>
