feat: api in card

--- a/index.html
+++ b/index.html
@@ -51,20 +51,11 @@
             </section>
 
             <section class="card-container">
-                <div class="card">
 
-                </div>
-                <div class="card">
-
-                </div>
-                <div class="card">
-
-                </div>
             </section>
         </main>
 
-        <script async src="./scripts/script.js"></script>
-        <script async src="./scripts/api.js"></script>
+        <script async src="./scripts/card.js"></script>
         <script async src="./scripts/pages.js"></script>
     </body>
 
