feat: search bar

--- a/index.html
+++ b/index.html
@@ -45,8 +45,10 @@
                 </div>
         
                 <div class="searchBar-container">
-                    <input class="searchBar-input" type="text" placeholder="Buscar...">
-                    <img class="searchBar-icon" src="./images/lupa.svg" alt="lupa">
+                    <input class="searchBar-input" type="text" id="cityInput" placeholder="Buscar...">
+                    <button type="submit" id="searchButton">
+                        <img class="searchBar-icon" src="./images/lupa.svg" alt="lupa">
+                    </button>
                 </div>
             </section>
 
