--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 </div>
         
                 <div class="searchBar-container">
-                    <input class="searchBar-input" type="text" id="cityInput" placeholder="Buscar...">
+                    <input class="searchBar-input" type="text" id="cityInput" placeholder="Agregar ciudad...">
                     <button type="submit" id="searchButton">
                         <img class="searchBar-icon" src="./images/lupa.svg" alt="lupa">
                     </button>
