--- a/index.html
+++ b/index.html
@@ -56,8 +56,9 @@
             </section>
         </main>
 
-        <script async src="./scripts/card.js"></script>
+        <!-- <script async src="./scripts/card.js"></script> -->
         <script async src="./scripts/pages.js"></script>
+        <script async src="./scripts/apisCard.js"></script>
     </body>
 
 </html>
