--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
         <main>
             <section class="searchSection">
                 <div class="titleSection">
-                    <h1 class="titleSection--name">America</h1>
-                    <p class="titleSection--subtitle">& todos sus climas</p>
+                    <h1 class="titleSection--name">Todos</h1>
+                    <p class="titleSection--subtitle">tus climas</p>
                 </div>
         
                 <div class="searchBar-container">
                     <input class="searchBar-input" type="text" id="cityInput" placeholder="Agregar ciudad...">
-                    <button type="submit" id="searchButton">
+                    <button type="submit" id="searchButton" class="class="searchBar-icon">
                         <img class="searchBar-icon" src="./images/lupa.svg" alt="lupa">
                     </button>
                 </div>
