--- a/index.html
+++ b/index.html
@@ -49,7 +49,19 @@
             </section>
 
             <section class="card-container">
+                    <!-- <div class="iconWrapper">
+    
+                    </div>
 
+                    <div class="info-wrapper">
+                        <h2 class="cityName">Rio de Janeiro </h2>
+                        <p class="weatherDescription ">Parcialmente nublado</p>
+                        <p class="temperature">18ºC</p>
+                        <div class="temp-wrapper">
+                            <p>MAX 16ºC</p>
+                            <p>MIN 16ºC</p> 
+                        </div>
+                </div>-->
             </section>
         </main>
 
