--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
             </section>
         </main>
 
-        <script async src="./scripts/card.js"></script>
-        <script async src="./scripts/pages.js"></script>
+        <script async type="module" src="./scripts/searchBar.js"></script>
+        <script async type="module" src="./scripts/card.js"></script>
     </body>
 
 </html>
