feat:salvar os dados das cidades no `localstorage`

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <p class="titleSection--subtitle">tus climas</p>
                 </div>
         
-                    <form class="searchBar-container">
+                    <form class="searchBar-container" id="searchForm">
                         <input class="searchBar-input" type="text" id="searchCity" placeholder="Buscar...">
                         <button type="submit" id="searchButton" class="searchBar-icon">
                             <img class="searchBar-icon" src="./images/lupa.svg" alt="lupa">
@@ -65,8 +65,8 @@
             </section>
         </main>
 
-        <script async type="module" src="./scripts/searchBar.js"></script>
-        <script async type="module" src="./scripts/card.js"></script>
+        <script type="module" src="./scripts/card.js"></script>
+        <script type="module" src="./scripts/searchBar.js"></script>
     </body>
 
 </html>
